ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS =

EXTRA_DIST = ${top_srcdir}/README.md \
	     ${top_srcdir}/common.mk \
	     ${top_srcdir}/LICENSE \
	     ${top_srcdir}/common.h \
	     ${top_srcdir}/vapi/upower-glib-1.0.vapi \
	     ${top_srcdir}/vapi/gio-2.0.vapi \
	     ${top_srcdir}/vapi/gio-unix-2.0.vapi \
	     ${top_srcdir}/vapi/gio-settingsbackend-2.0.vapi \
	     ${top_srcdir}/vapi/glib-2.0.vapi

NULL =
CLEANFILES =

SUBDIRS = \
	data \
	lib\
	po 
#	src 
#	applets 
